<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/martle_green"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calBMI"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:paddingTop="20dp"
        android:textColor="@color/red_pigment" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="359dp"
        android:layout_centerInParent="true"
        android:background="@color/dark_jungle_green"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/peach_crayola"
            android:textColorHint="@color/peach_crayola"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/height_ft"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/height_ft"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/peach_crayola"
            android:textColorHint="@color/peach_crayola"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/height_inch"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:ems="10"
            android:hint="@string/height_in"
            android:inputType="number"
            android:padding="5dp"
            android:textColor="@color/peach_crayola"
            android:textColorHint="@color/peach_crayola"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/calculate_bmi"
            app:backgroundTint="#679289" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>